--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -14,6 +14,10 @@
       href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined"
       rel="stylesheet"
     />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,1,0"
+      rel="stylesheet"
+    />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
@@ -187,7 +191,7 @@
                   alt="voice messages"
                   class="d-none d-lg-block"
                 />
-                
+
                 <!-- Imagen mobile Español -->
                 <!-- <img
                   src="../../img/landing/home-mobile-es.svg"
@@ -204,105 +208,72 @@
             </div>
           </div>
         </section>
-        <section id="scrollspyHeading2" class="bg-success">
-          <h4>Benefits</h4>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
+        <section id="scrollspyHeading2" class="section-benefits">
+          <div class="container">
+            <h2 class="section-benefits-title">Benefits</h2>
+            <div class="section-benefits-container">
+              <div class="benefits-item">
+                <div class="icon-box">
+                  <span class="material-symbols-outlined"> headset_off </span>
+                </div>
+                <div class="text-box">
+                  <p class="mb-0 text-center">
+                    <strong>Read audio messages</strong> when you can't listen
+                  </p>
+                </div>
+              </div>
+              <div class="benefits-item">
+                <div class="icon-box">
+                  <span class="material-symbols-outlined"> timer </span>
+                </div>
+                <div class="text-box">
+                  <p class="mb-0 text-center">
+                    <strong>Save time</strong> by reading instead of listening
+                  </p>
+                </div>
+              </div>
+              <div class="benefits-item">
+                <div class="icon-box">
+                  <span class="material-symbols-outlined"> autorenew </span>
+                </div>
+                <div class="text-box">
+                  <p class="mb-0 text-center">
+                    <strong>Automatic transcriptions</strong>. No forwarding
+                    required
+                  </p>
+                </div>
+              </div>
+              <div class="benefits-item">
+                <div class="icon-box">
+                  <span class="material-symbols-outlined"> groups </span>
+                </div>
+                <div class="text-box">
+                  <p class="mb-0 text-center">
+                    Works with <strong>contacts and groups</strong> chats
+                  </p>
+                </div>
+              </div>
+              <div class="benefits-item">
+                <div class="icon-box">
+                  <span class="material-symbols-outlined"> search </span>
+                </div>
+                <div class="text-box">
+                  <p class="mb-0 text-center">
+                    <strong>Search</strong> inside audio messages
+                  </p>
+                </div>
+              </div>
+              <div class="benefits-item">
+                <div class="icon-box">
+                  <span class="material-symbols-outlined"> language </span>
+                </div>
+                <div class="text-box">
+                  <p class="mb-0 text-center">
+                    <strong>50+</strong> supported languages
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
         </section>
         <section id="scrollspyHeading3">
@@ -724,6 +695,5 @@
     ></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
-    
   </body>
 </html>
