--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -161,7 +161,7 @@
         </div>
       </nav>
     </header>
-    <main>
+    <main class="bg-white">
       <article
         data-bs-spy="scroll"
         data-bs-target="#navbar-scrollspy"
@@ -208,75 +208,145 @@
             </div>
           </div>
         </section>
-        <section id="scrollspyHeading2" class="section-benefits">
+        <section id="scrollspyHeading2">
+          <div class="section-benefits">
+            <div class="container">
+              <h2 class="section-benefits-title">Benefits</h2>
+              <div class="section-benefits-container">
+                <div class="benefits-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> headset_off </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0 text-center">
+                      <strong>Read audio messages</strong> when you can't listen
+                    </p>
+                  </div>
+                </div>
+                <div class="benefits-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> timer </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0 text-center">
+                      <strong>Save time</strong> by reading instead of listening
+                    </p>
+                  </div>
+                </div>
+                <div class="benefits-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> autorenew </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0 text-center">
+                      <strong>Automatic transcriptions</strong>. No forwarding
+                      required
+                    </p>
+                  </div>
+                </div>
+                <div class="benefits-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> groups </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0 text-center">
+                      Works with <strong>contacts and groups</strong> chats
+                    </p>
+                  </div>
+                </div>
+                <div class="benefits-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> search </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0 text-center">
+                      <strong>Search</strong> inside audio messages
+                    </p>
+                  </div>
+                </div>
+                <div class="benefits-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> language </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0 text-center">
+                      <strong>50+</strong> supported languages
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <div class="container">
-            <h2 class="section-benefits-title">Benefits</h2>
-            <div class="section-benefits-container">
-              <div class="benefits-item">
-                <div class="icon-box">
-                  <span class="material-symbols-outlined"> headset_off </span>
+            <div class="section-listen">
+              <h2 class="section-listen-title">
+                Can't listen to messages right now? Read them instead
+              </h2>
+              <div class="section-listen-container">
+                <div class="listen-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> groups_3 </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0">In a meeting</p>
+                  </div>
                 </div>
-                <div class="text-box">
-                  <p class="mb-0 text-center">
-                    <strong>Read audio messages</strong> when you can't listen
-                  </p>
+                <div class="listen-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> apartment </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0">Shared office space</p>
+                  </div>
                 </div>
-              </div>
-              <div class="benefits-item">
-                <div class="icon-box">
-                  <span class="material-symbols-outlined"> timer </span>
+                <div class="listen-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined">
+                      directions_bus
+                    </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0">On the bus</p>
+                  </div>
                 </div>
-                <div class="text-box">
-                  <p class="mb-0 text-center">
-                    <strong>Save time</strong> by reading instead of listening
-                  </p>
+                <div class="listen-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> coffee </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0">At Starbucks</p>
+                  </div>
                 </div>
-              </div>
-              <div class="benefits-item">
-                <div class="icon-box">
-                  <span class="material-symbols-outlined"> autorenew </span>
+                <div class="listen-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> web </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0">On a call</p>
+                  </div>
                 </div>
-                <div class="text-box">
-                  <p class="mb-0 text-center">
-                    <strong>Automatic transcriptions</strong>. No forwarding
-                    required
-                  </p>
+                <div class="listen-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> child_care </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0">Sleeping the baby</p>
+                  </div>
                 </div>
-              </div>
-              <div class="benefits-item">
-                <div class="icon-box">
-                  <span class="material-symbols-outlined"> groups </span>
-                </div>
-                <div class="text-box">
-                  <p class="mb-0 text-center">
-                    Works with <strong>contacts and groups</strong> chats
-                  </p>
-                </div>
-              </div>
-              <div class="benefits-item">
-                <div class="icon-box">
-                  <span class="material-symbols-outlined"> search </span>
-                </div>
-                <div class="text-box">
-                  <p class="mb-0 text-center">
-                    <strong>Search</strong> inside audio messages
-                  </p>
-                </div>
-              </div>
-              <div class="benefits-item">
-                <div class="icon-box">
-                  <span class="material-symbols-outlined"> language </span>
-                </div>
-                <div class="text-box">
-                  <p class="mb-0 text-center">
-                    <strong>50+</strong> supported languages
-                  </p>
+                <div class="listen-item">
+                  <div class="icon-box">
+                    <span class="material-symbols-outlined"> headset_off </span>
+                  </div>
+                  <div class="text-box">
+                    <p class="mb-0">Hearing impaired</p>
+                  </div>
                 </div>
               </div>
             </div>
           </div>
         </section>
         <section id="scrollspyHeading3">
+          <div class="container"></div>
           <h4>Privacy</h4>
           <div>
             <p>
