--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -195,13 +195,13 @@
                 <!-- Imagen mobile Español -->
                 <!-- <img
                   src="../../img/landing/home-mobile-es.svg"
-                  alt="voice messages"
+                  alt="mensajes de voz"
                   class="d-lg-none"
                 /> -->
                 <!-- Imagen desktop Español -->
                 <!-- <img
                   src="../../img/landing/home-desktop-es.svg"
-                  alt="voice messages"
+                  alt="mensajes de voz"
                   class="d-none d-lg-block"
                 /> -->
               </div>
@@ -346,105 +346,59 @@
           </div>
         </section>
         <section id="scrollspyHeading3">
-          <div class="container"></div>
-          <h4>Privacy</h4>
-          <div>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
-            <p>
-              Lorem ipsum dolor sit amet consectetur adipisicing elit.
-              Voluptatem quos amet accusamus eius, deserunt est voluptates natus
-              aspernatur enim soluta incidunt, ullam voluptatibus omnis fugit
-              eveniet molestiae harum tenetur ipsam?
-            </p>
+          <div class="container">
+            <div class="section-privacy">
+              <div class="section-privacy-container">
+                <div class="privacy-text">
+                  <h2 class="section-privacy-title">Privacy</h2>
+                  <p>
+                    User privacy is a top priority for us. We are dedicated to
+                    handling only the essential data required for our operations
+                  </p>
+                  <p>
+                    Neither audio messages nor transcriptions are read or stored
+                    by Ozer.
+                  </p>
+                  <p>
+                    We regularly audit our security and privacy practices to
+                    ensure they are effective.
+                  </p>
+                  <a href="#" class="privacy-link">
+                    <span class="text">Read out privacy policy</span>
+                    <span class="material-symbols-outlined">
+                      arrow_forward
+                    </span>
+                  </a>
+                </div>
+                <div class="privacy-img">
+                  <!-- Imagen mobile Inglés -->
+                  <img
+                    src="../../img/landing/privacy-mobile-en.svg"
+                    alt="privacy"
+                    class="d-lg-none"
+                  />
+                  <!-- Imagen desktop Inglés -->
+                  <img
+                    src="../../img/landing/privacy-desktop-en.svg"
+                    alt="privacy"
+                    class="d-none d-lg-block"
+                  />
+
+                  <!-- Imagen mobile Español -->
+                  <!-- <img
+                    src="../../img/landing/privacy-mobile-es.svg"
+                    alt="privacidad"
+                    class="d-lg-none"
+                  /> -->
+                  <!-- Imagen desktop Español -->
+                  <!-- <img
+                    src="../../img/landing/privacy-desktop-es.svg"
+                    alt="privacidad"
+                    class="d-none d-lg-block"
+                  /> -->
+                </div>
+              </div>
+            </div>
           </div>
         </section>
         <section id="scrollspyHeading4">
