--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -604,6 +604,100 @@
           </div>
         </section>
         <section id="scrollspyHeading6">
+          <div class="container">
+            <div class="section-landing-contact">
+              <div class="section-landing-contact-container">
+                <div class="landing-contact-img d-none d-lg-block">
+                  <!-- Imagen desktop Inglés -->
+                  <img
+                    src="../../img/landing/contact-desktop-en.svg"
+                    alt="contact"
+                  />
+
+                  <!-- Imagen desktop Español -->
+                  <!-- <img
+                    src="../../img/landing/contact-desktop-es.svg"
+                    alt="contacto"
+                  /> -->
+                </div>
+                <div class="landing-contact-text">
+                  <h2 class="section-landing-contact-title">Contact</h2>
+                  <form
+                    action=""
+                    class="landing-contact-form"
+                    id="landingContactForm"
+                  >
+                    <div>
+                      <div class="mt-3">
+                        <label
+                          for="landingContactName"
+                          class="landing-contact-form__label"
+                          >Name *
+                        </label>
+                        <input
+                          type="text"
+                          class="landing-contact-form__input"
+                          id="landingContactName"
+                          aria-describedby="landingNameFeedback"
+                        />
+                        <p class="invalid-feedback" id="landingNameFeedback">
+                          Tienes que completar este campo
+                        </p>
+                      </div>
+                      <div class="mt-3">
+                        <label
+                          for="landingContactMail"
+                          class="landing-contact-form__label"
+                          >Email *
+                        </label>
+                        <input
+                          type="text"
+                          class="landing-contact-form__input"
+                          id="landingContactMail"
+                          aria-describedby="landingMailFeedback"
+                        />
+                        <p class="invalid-feedback" id="landingMailFeedback">
+                          Tienes que completar este campo
+                        </p>
+                      </div>
+                      <div class="mt-3">
+                        <label
+                          for="landingContactMsg"
+                          class="landing-contact-form__label message"
+                        >
+                          <span>Message *</span>
+                          <span id="charCount">0/500</span>
+                        </label>
+                        <textarea
+                          class="landing-contact-form__input message"
+                          id="landingContactMsg"
+                          aria-describedby="landingMsgFeedback"
+                          maxlength="500"
+                        ></textarea>
+                        <p class="invalid-feedback" id="landingMsgFeedback">
+                          Tienes que completar este campo
+                        </p>
+                      </div>
+                    </div>
+                    <div class="text-end mt-3">
+                      <button class="btn btn-lg btn-primary" type="submit">
+                        Send message
+                      </button>
+                    </div>
+                  </form>
+                  <div
+                    class="landing-contact-form-success d-none"
+                    id="landingContactFormSuccess"
+                  >
+                    <p class="mb-0">
+                      🎉<strong>We have received your message!</strong> We will
+                      contact you shortly
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
           <h4>Contact</h4>
           <div>
             <p>
@@ -719,5 +813,6 @@
     ></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
+    <script src="../../js/form-landing.js"></script>
   </body>
 </html>
