--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -27,7 +27,7 @@
     <link href="../../assets/css/styles.css" rel="stylesheet" />
   </head>
 
-  <body>
+  <body class="bg-white">
     <header class="header-landing">
       <nav class="navbar">
         <div class="container">
@@ -701,7 +701,83 @@
         </section>
       </article>
     </main>
-    
+
+    <footer class="footer-landing">
+      <div class="footer-bg-1 d-none d-lg-block"></div>
+      <div class="footer-bg-2 d-none d-lg-block"></div>
+      <div class="footer-bg-3">
+        <div class="container">
+          <div class="footer-container">
+            <div class="footer-brand">
+              <div class="footer-brand-logo">
+                <img
+                  src="../../img/landing/Logo-Ozer.svg"
+                  alt="Logotipo Ozer"
+                />
+                <span>Ozer.bot</span>
+              </div>
+
+              <button type="button" class="btn btn-lg btn-primary dark-mode">
+                Try for free
+              </button>
+            </div>
+            <div class="footer-links">
+              <div class="footer-links-sections">
+                <p class="footer-links-sections-title mb-3 fw-bold">
+                  Ozer Website
+                </p>
+                <a href="#scrollspyHeading1" class="footer-links-sections-link"
+                  >Home</a
+                >
+                <a href="#scrollspyHeading2" class="footer-links-sections-link"
+                  >Benefits</a
+                >
+                <a href="#scrollspyHeading3" class="footer-links-sections-link"
+                  >Privacy</a
+                >
+                <a href="#scrollspyHeading4" class="footer-links-sections-link"
+                  >Pricing</a
+                >
+                <a href="#scrollspyHeading5" class="footer-links-sections-link"
+                  >FAQs</a
+                >
+                <a href="#scrollspyHeading6" class="footer-links-sections-link"
+                  >Contact</a
+                >
+              </div>
+              <div class="footer-links-sections">
+                <p class="footer-links-sections-title mb-3 fw-bold">
+                  Ozer Settings
+                </p>
+                <a href="#" class="footer-links-sections-link">General</a>
+                <a href="#" class="footer-links-sections-link">Contacts</a>
+                <a href="#" class="footer-links-sections-link">Groups</a>
+              </div>
+              <div class="footer-links-sections">
+                <p class="footer-links-sections-title mb-3 fw-bold">
+                  Social Media
+                </p>
+                <img
+                  src="../../img/landing/x-social-media.svg"
+                  alt="x social media"
+                  class="x-img-media"
+                />
+              </div>
+            </div>
+          </div>
+          <hr />
+          <div class="footer-end body-2">
+            <div>
+              <span>© 2024 Ozer</span>
+            </div>
+            <div>
+              <a href="#" class="mb-3 mb-lg-0 me-lg-3">Terms and conditions</a>
+              <a href="#">Privacy policy</a>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
       integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
@@ -714,6 +790,7 @@
     ></script>
     <!-- Desplegable de Idioma -->
     <script src="../../js/language.js"></script>
+    <!-- Validación de formulario -->
     <script src="../../js/form-landing.js"></script>
   </body>
 </html>
