--- a/views/landing/landing.html
+++ b/views/landing/landing.html
@@ -165,7 +165,8 @@
       <article
         data-bs-spy="scroll"
         data-bs-target="#navbar-scrollspy"
-        data-bs-root-margin="0px 0px -40%"
+        data-bs-threshold="0,1" 
+        data-bs-root-margin="-30% 0% -70%"
         data-bs-smooth-scroll="true"
         tabindex="0"
       >
